--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/DiscoViking/website/issues"
   },
-  "homepage": "https://github.com/DiscoViking/website#readme"
+  "homepage": "https://github.com/DiscoViking/website#readme",
+  "devDependencies": {
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0"
+  }
 }
