--- a/app/package.json
+++ b/app/package.json
@@ -20,5 +20,8 @@
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "react": "^15.4.1"
   }
 }
