--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/DiscoViking/website#readme",
   "devDependencies": {
+    "path": "^0.12.7",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "history": "^4.5.0",
     "react": "^15.4.1"
   }
 }
