--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "es6-shim": "^0.35.2",
     "history": "^4.5.0",
     "react": "^15.4.1"
   }
