--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "es6-shim": "^0.35.2",
     "history": "^4.5.0",
-    "react": "^15.4.1"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   }
 }
