--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DiscoViking/website#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^2.24.1",
     "path": "^0.12.7",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
