--- a/app/package.json
+++ b/app/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/DiscoViking/website#readme",
   "devDependencies": {
+    "awesome-typescript-loader": "3.0.0-beta.10",
     "html-webpack-plugin": "^2.24.1",
     "path": "^0.12.7",
+    "source-map-loader": "^0.1.5",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "webpack": "^1.14.0"
