--- a/app/package.json
+++ b/app/package.json
@@ -18,9 +18,14 @@
   "homepage": "https://github.com/DiscoViking/website#readme",
   "devDependencies": {
     "awesome-typescript-loader": "3.0.0-beta.10",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "path": "^0.12.7",
     "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "webpack": "^1.14.0"
@@ -28,6 +33,8 @@
   "dependencies": {
     "es6-shim": "^0.35.2",
     "history": "^3.2.1",
+    "materialize-css": "^0.97.8",
+    "materializecss": "^1.0.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0"
