--- a/app/package.json
+++ b/app/package.json
@@ -33,10 +33,12 @@
   "dependencies": {
     "es6-shim": "^0.35.2",
     "history": "^3.2.1",
-    "materialize-css": "^0.97.8",
-    "materializecss": "^1.0.11",
+    "jquery": "^2.2.4",
+    "lodash": "^4.17.2",
+    "material-ui": "^0.16.5",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
