Rearrange config a bit.  Fix message service decoding json body

--- a/server/server.yml
+++ b/server/server.yml
@@ -1,7 +1,12 @@
-port: 8080
-read-timeout: 5
-write-timeout: 10
+contact:
+  email:
+    to: test@test.test
 
-ssl:
-  on: false
+server:
+  port: 8080
+  read-timeout: 5
+  write-timeout: 10
+
+  ssl:
+    on: false
 
