--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.1"
   }
 }
