--- a/server/server-prod.yml
+++ b/server/server-prod.yml
@@ -8,6 +8,9 @@ auth:
   users:
     admin: $2y$10$PC9DVQstDfvr2aUJIJqSiungLt1DRSWvCmkgiBbyCavA8CMLvk2p2
 
+images:
+  directory: ../var/data/images
+
 pages:
   directory: ../var/data/pages
 
