--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "3.0.0-beta.10",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "json-loader": "^0.5.4",
