--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ go:
 
 before_install:
   - nvm install $NODE_VERSION
-  - npm install -g webpack typings
+  - npm install -g webpack typings tslint
 
 script:
   - make dist
-  - cd server && go test ./...
+  - go test -v ./...
+  - go vet ./...
+  - cd app && tslint --project ./tslint.json
