--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,16 @@
   },
   "homepage": "https://github.com/DiscoViking/website#readme",
   "devDependencies": {
+    "@types/es6-shim": "^0.31.35",
+    "@types/history": "^3.2.2",
+    "@types/jquery": "^3.3.0",
+    "@types/lodash": "^4.14.102",
+    "@types/material-ui": "^0.20.5",
+    "@types/numeral": "0.0.22",
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^3.0.14",
+    "@types/react-router-dom": "^4.2.3",
     "awesome-typescript-loader": "3.0.0-beta.10",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -37,12 +47,12 @@
     "history": "^3.2.1",
     "jquery": "^2.2.4",
     "lodash": "^4.17.2",
-    "material-ui": "^0.16.5",
+    "material-ui": "^0.20.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-markdown": "^2.4.2",
-    "react-router": "^3.0.0",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.1"
   }
