--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,10 +8,15 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "strictNullChecks": true,
-        "target": "ES5"
+        "target": "ES5",
+        "typeRoots": [
+            "node_modules/@types"
+        ]
     },
+    "exclude": [
+        "node_modules",
+    ],
     "include": [
         "src/**/*",
-        "typings/index.d.ts"
     ]
 }
