--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_install:
 
 script:
   - make dist
-  - go test -v ./...
-  - go vet ./...
+  - cd server && go test -v ./...
+  - cd server && go vet ./...
   - cd app && tslint --project ./tslint.json
