--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,8 @@
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-cli": "^3.2.0"
   },
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
