--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 
 before_install:
   - nvm install $NODE_VERSION
-  - npm install -g webpack yarn tslint typescript
+  - npm install -g webpack webpack-cli yarn tslint typescript
 
 script:
   - make dist
