--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ go:
 
 before_install:
   - nvm install $NODE_VERSION
-  - npm install -g webpack webpack-cli yarn tslint typescript
+  - npm install -g yarn
 
 script:
   - make dist
   - cd server && go test -v ./...
   - cd server && go vet ./...
-  - cd app && tslint --project ./tslint.json
+  - cd app && yarn lint
