--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,10 @@
   "description": "Website frontend",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "dev": "webpack --watch",
+    "dist": "webpack --config ./webpack.config.prod.js",
+    "lint": "tslint --project ./tslint.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +40,7 @@
     "path": "^0.12.7",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "tslint": "^5.12.0",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0"
   },
