--- a/app/package.json
+++ b/app/package.json
@@ -30,19 +30,19 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-router": "^4.4.3",
     "awesome-typescript-loader": "3.0.0-beta.10",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.0",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
-    "json-loader": "^0.5.4",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^2.7.1",
-    "less-loader": "^2.2.3",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "path": "^0.12.7",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "tslint": "^5.12.0",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0"
   },
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
