--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ go:
   - 1.12
   - master
 
+cache:
+  yarn: true
+  directories:
+    - app/node_modules
+
 before_install:
   - nvm install $NODE_VERSION
   - npm install -g yarn
