--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack --watch",
-    "dist": "./node_modules/.bin/webpack --config ./webpack.config.prod.js",
+    "dist": "webpack --config ./webpack.config.prod.js",
     "lint": "tslint --project ./tslint.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
