--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - npm install -g yarn
 
 install:
-  - cd app && yarn --verbose
+  - cd app && yarn --non-interactive --frozen-lockfile
   - cd ../server && go get
 
 script:
