--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,5 @@ jobs:
       - run: cd app && yarn dist
       - run: cd server && go get -v -t -d ./...
       - run: cd server && go test -v ./...
+      - run: cd server && go vet ./...
+      - run: cd app && yarn lint
