--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,4 @@ jobs:
       - run: cd server && go test -v ./...
       - run: cd server && go vet ./...
       - run: cd app && yarn lint
+      - run: make dist
