--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@types/numeral": "^0.0.25",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.12",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "awesome-typescript-loader": "3.0.0-beta.10",
@@ -53,6 +54,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-markdown": "^2.4.2",
+    "react-redux": "^6.0.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
