--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
     "tslint": "^5.12.0",
     "typescript": "^2.1.4",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.0"
   },
   "dependencies": {
