--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "jsx": "react",
         "module": "commonjs",
+        "esModuleInterop": true,
         "noImplicitAny": true,
         "outDir": "build/tmp",
         "removeComments": false,
