--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@types/numeral": "^0.0.25",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.9",
     "@types/react-redux": "^6.0.12",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
@@ -53,6 +54,7 @@
     "material-ui": "0.20.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet": "^5.2.1",
     "react-markdown": "^2.4.2",
     "react-redux": "^6.0.0",
     "react-router": "^4.0.0",
