--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,7 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.0",
     "es6-shim": "^0.35.5",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
