--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "es6-shim": "^0.35.5",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
