--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,6 @@
     "@types/es6-shim": "^0.31.39",
     "@types/jquery": "^3.3.31",
     "@types/lodash": "^4.14.138",
-    "@types/material-ui": "^0.21.7",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -48,10 +47,11 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "es6-shim": "^0.35.5",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
-    "material-ui": "0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
