--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^3.0.0"
   }
 }
